# Polymarket-crypto-5min-arbitrage-bot

./: Cargo.toml  README.md  README.zh-CN.md
src/: config.rs  lib.rs  main.rs  positions.rs  trial.rs
src/market/: discoverer.rs  mod.rs  scheduler.rs
src/monitor/: arbitrage.rs  mod.rs  orderbook.rs
src/risk/: hedge_monitor.rs  manager.rs  mod.rs  position_balancer.rs  positions.rs  recovery.rs
src/trading/: mod.rs  orders.rs
src/utils/: arbitrage_logger.rs  errors.rs  logger.rs  mod.rs
